--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # VITE_BACKEND_URL=https://flowerwebsitebackend.vercel.app  #Vercel Deployed Backend
-VITE_BACKEND_URL=https://flowerwebsitebackend.onrender.com/ #Render Deployed Backend
+VITE_BACKEND_URL=https://flowerwebsitebackend.onrender.com #Render Deployed Backend
